syntax = "proto3";

package hello;

message HelloMessage {
  string message = 1;
  uint32 wait_time = 2;
}

service Hello {
    rpc HelloWorld(HelloMessage) returns (HelloMessage) {}
    rpc GoodbyeWorld(HelloMessage) returns (HelloMessage) {}
}